# mash_mash_graph

./: .gitignore  CMakeLists.txt  LiteMath.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  readme.md  readme.txt
shaders/: fragment.glsl
task-01/: CMakeLists.txt  LiteMath.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  readme.txt
task-02/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  common.h  core.cpp  main.cpp  readme.txt  util.cpp  util.h  zip.bash
task-02/shaders/: fragment.glsl  vertex.glsl
task-03/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  common.h  core.cpp  main.cpp  readme.txt  util.cpp
task-03/shaders/: fragment.glsl  vertex.glsl
